# mini-ddz

./: .eslintrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: memory.md
.claude/hooks/: auto-format.sh  sync-memory.sh
.claude/memory/: MEMORY.md  feedback_git_workflow.md  feedback_use_uv_run.md
.github/workflows/: ci.yml
docs/: README.md  api.md  api_documentation.md  guide.md  issues.md  llm-agent-audit-report.md  llm_beam_search_survey.md
docs/superpowers/plans/: 2026-05-16-llm-agent.md
docs/superpowers/specs/: 2026-05-16-llm-agent-design.md
memory/: MEMORY.md  feedback_commit_format.md  feedback_direct_main_commit.md  feedback_git_workflow.md  feedback_main_branch.md  feedback_no_gh_cli.md
public/: index.html
pve_server/: agent_types.py  card_maps.py  deck.py  deep.py  game.py  llm_agent.py  llm_config.py  models.py  random_agent.py  replay_db.py  run_douzero.py
pve_server/utils/: move_detector.py  move_generator.py  move_selector.py  utils.py
src/: App.js  App.test.js  setupTests.js
src/assets/: gameview.scss
src/components/: AgentSelector.js  Navbar.js  Navbar.test.js
src/components/GameBoard/: DoudizhuGameBoard.js  DoudizhuGameBoard.test.js  index.js
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/utils/: config.js  config.test.js  gameData.js  index.js  index.test.js
src/view/AIBattleView/: AIBattleView.js  index.js
src/view/ConfigurableBattleView/: ConfigurableBattleView.js  ConfigurableBattleView.test.js  index.js
src/view/GamePlaybackView/: GamePlaybackView.js  GamePlaybackView.test.js  GamePlaybackView.timer.test.js  index.js
src/view/LLMBattleView/: LLMBattleView.js  index.js
src/view/PvEView/: PvEDoudizhuDemoView.js  PvEDoudizhuDemoView.test.js  usePvEGame.js
src/view/ReplayListView/: ReplayListView.js  index.js
src/view/ReplayView/: DoudizhuReplayView.js  DoudizhuReplayView.test.js  index.js
tests/: conftest.py  test_deep.py  test_llm_agent.py  test_llm_config.py  test_models.py  test_move_detector.py  test_move_generator.py  test_move_selector.py  test_random_agent.py  test_replay_db.py  test_run_douzero.py  test_utils.py  test_watch_llm_battle.py
tools/: test_llm_integration.py  watch_llm_battle.py
