[project]
name = "mini-ddz"
version = "0.1.0"
description = "Mini DDZ - A Dou Dizhu (Chinese Poker) PvE Demo"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = []
keywords = ["douzero", "doudizhu", "game", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=2.0",
    "flask-cors",
    "torch",
    "numpy",
    "onnx",
    "onnxruntime",
    "pytest>=8.4.2",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
douzero-server = "pve_server.run_douzero:main"

[tool.uv]
default-groups = []

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pve_server"]
