[project]
name = "mini-ddz"
version = "0.1.0"
description = "Mini DDZ - A Dou Dizhu (Chinese Poker) PvE Demo"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = []
keywords = ["douzero", "doudizhu", "game", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=2.0",
    "flask-cors",
    "torch",
    "numpy",
    "onnx",
    "onnxruntime",
    "pytest>=8.4.2",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
douzero-server = "pve_server.run_douzero:main"

[tool.uv]
default-groups = []

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Match .flake8 select: B,C,E,F,N,P,T4,W,B9 (using ruff compatible subset)
select = ["E", "F", "I", "W", "N", "B"]
ignore = [
    # from .flake8 (ruff compatible subset)
    "E203", "E302", "E303", "E305", "E402", "E501", "E721", "E731", "E741",
    "F405", "F821", "F841",
    "C408",
    "N803", "N806", "N812", "N817",
    "B007", "B008",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
explicit_package_bases = true
exclude = [
    "tests/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "onnxruntime.*",
    "torch.*",
    "onnx.*",
    "flask.*",
    "flask_cors.*",
    "numpy.*",
]
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["pve_server"]

[tool.pytest.ini_options]
pythonpath = ["pve_server"]
